# NSimpleSaturator

./: .gitignore  CMakeLists.txt  README.md
resource/: NSimpleSaturatoreditor.uidesc
source/: NSimpleSaturatorcids.h  NSimpleSaturatorcontroller.cpp  NSimpleSaturatorcontroller.h  NSimpleSaturatorentry.cpp  NSimpleSaturatorprocessor.cpp  NSimpleSaturatorprocessor.h  version.h
